<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/post_Lay"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post_share">

    <android.support.v7.widget.Toolbar
        android:id="@+id/post_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/share_post_toolbar"
        app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/share_imageView"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:src="@color/colorPrimaryDark"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/colorPrimaryDark"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tweet_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/neler_oluyor"
                android:maxLength="100"
                android:textAlignment="center"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweetle"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_button"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>