<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/loginLayout"
    tools:context=".loginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/twitterLogo"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="175dp"
                android:src="@drawable/twitter"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp"
                />
            <LinearLayout
                android:id="@+id/loginLinear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/twitterLogo">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@android:color/white"
                    android:textAlignment="center"
                    android:layout_below="@id/twitterLogo">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginVertical="10dp"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryText"
                        android:hint="@string/email_adresi"
                        android:inputType="textEmailAddress"
                        android:textAlignment="center">
                    </android.support.v7.widget.AppCompatEditText><requestFocus></requestFocus>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    app:errorTextAppearance="@android:color/white"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginVertical="10dp"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryText"
                        android:hint="@string/ifreniz"
                        android:inputType="textPassword"
                        android:textAlignment="center"
                        android:maxLength="20" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:textColor="@android:color/white"
                    android:text="@string/ifreni_mi_unuttun"
                    android:textAlignment="center"
                    android:clickable="true"
                    android:textSize="12dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_below="@+id/loginLinear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/signInButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g_r_yap"
                    android:textAlignment="center"
                    android:layout_marginRight="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/login_button"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/hala_hesab_n_z_yok_mu"
                    android:layout_marginTop="12dp"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/imdi_kay_t_ol"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>